--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -332,10 +332,7 @@
                 {
                     @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
                     {
-                        if (item == Enum.GetName(DeliveryMethod.PostOffice) ||
-                            item == Enum.GetName(DeliveryMethod.HomeDelivery) ||
-                            item == Enum.GetName(DeliveryMethod.DeliveredByStore) ||
-                            item == Enum.GetName(DeliveryMethod.BlackCat1) ||
+                        if (item == Enum.GetName(DeliveryMethod.BlackCat1) ||
                             item == Enum.GetName(DeliveryMethod.BlackCatFreeze) ||
                             item == Enum.GetName(DeliveryMethod.BlackCatFrozen) ||
                             item == Enum.GetName(DeliveryMethod.TCatDeliveryNormal) ||
@@ -363,7 +360,12 @@
                     {
                         if (item == Enum.GetName(DeliveryMethod.PostOffice) ||
                             item == Enum.GetName(DeliveryMethod.HomeDelivery) ||
-                            item == Enum.GetName(DeliveryMethod.DeliveredByStore))
+                            item == Enum.GetName(DeliveryMethod.BlackCat1) ||
+                            item == Enum.GetName(DeliveryMethod.BlackCatFreeze) ||
+                            item == Enum.GetName(DeliveryMethod.BlackCatFrozen) ||
+                            item == Enum.GetName(DeliveryMethod.TCatDeliveryNormal) ||
+                            item == Enum.GetName(DeliveryMethod.TCatDeliveryFreeze) ||
+                            item == Enum.GetName(DeliveryMethod.TCatDeliveryFrozen))
                         {
                             if (IsShippingMethodEnabled(item)) 
                             {
@@ -390,12 +392,7 @@
                     @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
                     {
                         if (item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) ||
-                            item == Enum.GetName(DeliveryMethod.SevenToEleven1) ||
-                            item == Enum.GetName(DeliveryMethod.FamilyMart1) ||
-                            item == Enum.GetName(DeliveryMethod.FamilyMartC2C) ||
-                            item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenNormal) ||
-                            item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenFreeze) ||
-                            item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenFrozen))
+                            item == Enum.GetName(DeliveryMethod.SevenToEleven1))
                         {
                             if (IsShippingMethodEnabled(item)) 
                             {
@@ -418,6 +415,8 @@
                     {
                         if (item == Enum.GetName(DeliveryMethod.FamilyMart1) ||
                             item == Enum.GetName(DeliveryMethod.FamilyMartC2C) ||
+                            item == Enum.GetName(DeliveryMethod.SevenToElevenC2C) ||
+                            item == Enum.GetName(DeliveryMethod.SevenToEleven1) ||
                             item == Enum.GetName(DeliveryMethod.SevenToElevenFrozen) ||
                             item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenNormal) ||
                             item == Enum.GetName(DeliveryMethod.TCatDeliverySevenElevenFreeze) ||
@@ -446,6 +445,26 @@
                 @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
                 {
                     if (item == Enum.GetName(DeliveryMethod.SelfPickup))
+                    {
+                        <label for="@item" class="form-label">
+                            <input type="checkbox"
+                                   class="form-check-input me-1"
+                                   id="@item"
+                                   disabled="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
+                                               (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore")) &&
+                                               item is not "DeliveredByStore")"
+                                   checked="@((EditGroupBuyDto.ExcludeShippingMethod is not null) &&
+                                              (EditGroupBuyDto.ExcludeShippingMethod.Contains(item)))"
+                                   @onchange="(value) => OnShippingMethodCheckedChange(item, value)" />
+                            @L[item]
+                        </label>
+                    }
+                }
+                <br />
+                <label class="form-label">Delivered By Store Type</label><br />
+                @foreach (string item in Enum.GetNames(typeof(DeliveryMethod)))
+                {
+                    if (item == Enum.GetName(DeliveryMethod.DeliveredByStore))
                     {
                         <label for="@item" class="form-label">
                             <input type="checkbox"
