--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -37,9 +37,13 @@
         max-height: 55px !important;
     }
 
-        .drag-drop-span i {
-            cursor: pointer;
-        }
+    .drag-drop-span i {
+        cursor: pointer;
+    }
+
+    .color-scheme > .b-input-color-picker-preview {
+        height: 9.55rem;
+    }
 </style>
 <h3>@L["NewGroupBuy"]</h3>
 <LoadingIndicator @ref="Loading" FullScreen FadeIn></LoadingIndicator>
@@ -691,6 +695,59 @@
                 </select>
             </Div>
         </Div>
+        
+        <Div Class="row">
+            <Div Class="col-2">@L["Color Schemes"]</Div>
+            <Div Class="col-2">@L["Select Color Theme"]</Div>
+            <Div Class="col-8">
+                <select class="form-select"
+                        @onchange=OnColorSchemeChange>
+                        <option>@L["Choose Color Theme"]</option>
+                    @foreach (ColorScheme value in Enum.GetValues<ColorScheme>())
+                    {
+                        <option value="@value">@L[value.ToString() ?? string.Empty]</option>
+                    }
+                </select>
+            </Div>
+        </Div>
+
+        @if (IsColorPickerOpen)
+        {
+            <br />
+            <Div Class="col-12 d-flex">
+                <Div Class="col-2" Style="margin-left: 25px;">
+                    <label class="form-label">@L["Primary Color"]</label>
+                    <ColorPicker Class="color-scheme" @bind-Color="@CreateGroupBuyDto.PrimaryColor" />
+                    <TextEdit hidden @bind-text="CreateGroupBuyDto.PrimaryColor" class="form-control mt-2" />
+                </Div>
+
+                <Div Class="col-2" Style="margin-left: 49px;">
+                    <label class="form-label">@L["Secondary Color"]</label>
+                    <ColorPicker Class="color-scheme" @bind-Color="@CreateGroupBuyDto.SecondaryColor" />
+                    <TextEdit hidden @bind-text="CreateGroupBuyDto.SecondaryColor" class="form-control mt-2" />
+                </Div>
+
+                <Div Class="col-2" Style="margin-left: 49px;">
+                    <label class="form-label">@L["Background Color"]</label>
+                    <ColorPicker Class="color-scheme" @bind-Color="@CreateGroupBuyDto.BackgroundColor" />
+                    <TextEdit hidden @bind-text="CreateGroupBuyDto.BackgroundColor" class="form-control mt-2" />
+                </Div>
+
+                <Div Class="col-2" Style="margin-left: 49px;">
+                    <label class="form-label">@L["Secondary Background Color"]</label>
+                    <ColorPicker Class="color-scheme" @bind-Color="@CreateGroupBuyDto.SecondaryBackgroundColor" />
+                    <TextEdit hidden @bind-text="CreateGroupBuyDto.SecondaryBackgroundColor" class="form-control mt-2" />
+                </Div>
+
+                <Div Class="col-2" Style="margin-left: 49px;">
+                    <label class="form-label">@L["Alert Color"]</label>
+                    <ColorPicker Class="color-scheme" @bind-Color="@CreateGroupBuyDto.AlertColor" />
+                    <TextEdit hidden @bind-text="CreateGroupBuyDto.AlertColor" class="form-control mt-2" />
+                </Div>
+            </Div>
+            <br />
+        }
+
         <div class="row">
             <div class="col-2">@L["Gateway"]</div>
             <div class="col-2">@L["PaymentMethod"] <span class="text-danger"> *</span></div>
