--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -857,7 +857,7 @@
         <TextEdit @bind-Text="@CreateGroupBuyDto.GTM" />
         </div>
         </div> *@
-
+        <Divider></Divider>
         <Div Class="row">
             <Div Class="col-2">@L["Color Schemes"]</Div>
                 <Div Class="col-2">@L["Select Color Theme"]</Div>
