--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -846,6 +846,7 @@
             </div>
         </div> *@
 
+        <Divider></Divider>
         <Div Class="row">
             <Div Class="col-2">@L["Color Schemes"]</Div>
                 <Div Class="col-2">@L["Select Color Theme"]</Div>
