--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -560,7 +560,8 @@
                        (CreateGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliveryFrozen")) ||
                        (CreateGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliverySevenElevenNormal")) ||
                        (CreateGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliverySevenElevenFreeze")) ||
-                       (CreateGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliverySevenElevenFrozen"))))
+                       (CreateGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliverySevenElevenFrozen")) ||
+                       (CreateGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore"))))
                         {
                             <label for="@island" class="form-label">
                                 <input type="checkbox"
