--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -568,7 +568,8 @@
                                 (EditGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliveryFrozen")) || 
                                 (EditGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliverySevenElevenNormal")) ||
                                 (EditGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliverySevenElevenFreeze")) ||
-                                (EditGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliverySevenElevenFrozen"))))
+                                (EditGroupBuyDto.ExcludeShippingMethod.Contains("TCatDeliverySevenElevenFrozen")) ||
+                                (EditGroupBuyDto.ExcludeShippingMethod.Contains("DeliveredByStore"))))
                             {
                                 <label for="@island" class="form-label">
                                     <input type="checkbox" 
